--- a/VendingMachine/package.json
+++ b/VendingMachine/package.json
@@ -5,5 +5,11 @@
   "main": "app.js",
   "author": {
     "name": "Jmric"
+  },
+  "dependencies": {
+    "mocha": "3.2.0"
+  },
+  "scripts": {
+    "test": "mocha test"
   }
 }
